feat : condition에 따른 보드게임 조회 구현
