# swagger/API.yaml
@@ -253,34 +253,29 @@ paths:
       responses:
         '200':
           $ref : '#/components/schemas/BoardGame'
-  /games/player/{num}:
-    # 수정 필요 
-    get:
+  /games/condition:
+    post:
       tags:
         - boardGame
-      summary: player 수로 보드게임 조회(공사중)
-      parameters:
-        - name: num
-          in: path
-          required: true
-          schema:
-            type: number
-      responses:
-        '200':
-          $ref: '#/components/schemas/BoardGame'
-        '400':
-          description: access token이 유효하지 않습니다.
-  /games/age/{num}:
-    get:
-      tags:
-        - boardGame
-      summary: age 순으로 조회 
-      parameters:
-        - name: num
-          in: path
-          required: true
-          schema:
-            type: number
+      summary: condition 조회 
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                player:
+                  type: number
+                age:
+                  type: number
+                theme:
+                  type: string
+                time:
+                  type: string
+                complexity:
+                  type: string
+                type:
+                  type: string
       responses:
         '200':
           $ref: '#/components/schemas/BoardGame'
